--- a/ImageGallery/Pages/Index.cshtml
+++ b/ImageGallery/Pages/Index.cshtml
@@ -4,25 +4,21 @@
     ViewData["Title"] = "Image Gallery";
 }
 
-<div class="centered">
-    <h1 class="modal-header">Image Gallery</h1>
-</div>
-
-<div class="album text-muted">
-    <div class="container">
-        <div class="row">
+    <div class="centered">
+        <h1 class="modal-header">Image Gallery</h1>
+        <ul class="image-list">
             @foreach (var image in Model.Images)
             {
-                <div class="card">
-                    <a class="card" href="@image.ImagePath">
-                        <img class="lazy" src="@image.ImagePath" />
-                    </a>
-                </div>
+            <li class="image-list-item">
+                <a href="@image.ImagePath" target="_blank">
+                    <div class="image-card">
+                        <img class="lazy" src="@image.ImagePath" alt="" />
+                    </div>
+                </a>
+            </li>
             }
-        </div>
+        </ul>
     </div>
-</div>
-
 
 @section Scripts{
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.7/jquery.lazy.min.js" integrity="sha256-sSF4G6GdnMRF5ZKZOLYGcPvU0BTvmPMFaQ6025ZB+Nk=" crossorigin="anonymous"></script>
