--- a/ImageGallery/wwwroot/css/site.css
+++ b/ImageGallery/wwwroot/css/site.css
@@ -69,34 +69,39 @@ body {
     max-width: 40rem;
 }
 
-.album {
-    min-height: 50rem; /* Can be removed; just added for demo purposes */
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    background-color: #f7f7f7;
+.image-list {
+    list-style: none;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(18em, 1fr));
+    grid-gap: 20px;
 }
 
-div.card {
-    display: inline-block;
-    width: 33.333%;
-    margin-bottom: 3px;
-    margin-left: 3px;
-    border: 0;
-    max-height: 300px;
-    max-width: 300px;
+.image-list-item {
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
 }
 
+    .image-list-item a {
+        text-decoration: none;
+        color: inherit;
+    }
 
-a.card > img {
-    max-height: 300px;
-    max-width: 300px;
-    min-height: 50px;
-    min-width: 50px;
+    .image-list-item:hover {
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    }
+
+.image-card {
+    box-sizing: border-box;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 12px;
 }
 
-.card-text {
-    font-size: 85%;
-}
+    .image-card img {
+        width: 100%;
+    }
 
 footer {
     padding-top: 3rem;
